# cuda_stroke

./: CMakeLists.txt
src/: CMakeLists.txt
src/stroke/: aabb.h  algorithms.h  cuda_compat.h  gaussian.h  geometry.h  linalg.h  matrix.h  matrix_functions.h  matrix_operators.h  pretty_printers.h  ray.h  scalar_functions.h  utility.h  welford.h
src/stroke/detail/: linalg_functions.h  symmetric_mat.h  symmetric_mat_operators.h
src/stroke/grad/: gaussian.h  linalg.h  matrix_functions.h  quaternions.h  scalar_functions.h  util.h
src/stroke/unittest/: gradcheck.h  random_entity.h
unittests/: CMakeLists.txt  algorithms.cpp  gaussian.cpp  geometry.cpp  grad_gaussian.cu  grad_linalg.cu  grad_matrix.cu  grad_quaternions.cu  grad_scalar_functions.cu  gradcheck.cu  main.cpp  matrices.cpp  matrix.cu  matrix_benchmark.cu  scalar_functions.cpp  test_helpers.h  welford.cpp  welford_benchmark.cu
